<resources>
    <string name="app_name">PayForward</string>
    <string name="app_description">Communities Powered by People</string>

    <!-- IntroPageFragment strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginbutton">Login</string>
    <string name="signupbutton">Sign Up</string>
    <!-- SetLocation strings -->
    <string name="title_activity_set_location">Set Your Location</string>
    <string name="location_title1">See what\'s nearby</string>
    <string name="location_title2">or</string>
    <string name="current_location">Use Current Location</string>
    <string name="zipcode">Enter Zipcode</string>
    <string name="sign_up_type_helper">Who are you signing up?</string>
    <string name="myself_button">Myself</string>
    <string name="business_button">A Business or Organization</string>
    <string name="sign_up_name_helper">What\'s your name?</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="next_button">Next</string>
    <string name="title_activity_intropage">intropage</string>
    <string name="title_activity_previewscreens">previewscreens</string>
    <string name="desc">Tell us About You</string>
    <string name="describe">Briefly describe your interests, talents, ambitions, and anything else you want to share with the community</string>
    <string name="char_count">Characters Left:</string>
    <string name="offer_button"><b>Offer a Service</b></string>
    <string name="offer_text"><b>An Offer is a service that you are offering to the community in exchange for their points.</b></string>
    <string name="request_button"><b>Request a Service</b></string>
    <string name="request_text"><b>A Request is a way of asking your community for a service that you need in exchange for your points.</b></string>
    <string name="select_category">Select a Category</string>
    <string name="art_photography_design">Art, Photography, Design</string>
    <string name="architecture_printing_crafts">Architecture, Printing, Crafts</string>
    <string name="carpet_cleaning">Carpet cleaning</string>
    <string name="select_subcategory">Select a Subcategory(s)</string>
    <string name="title_activity_name_board">NameBoard</string>
    <string name="terms_title">Terms of Service</string>
    <string name="const_overview">Overview: </string>
    <string name="accept">I Accept</string>
    <string name="not_accept">I do not accept</string>
    <string name="text_createaccount">Create an Account</string>
    <string name="button_login_fb">Login with Facebook</string>
    <string name="text_or">- or -</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_verifymember">Verify that you\'re a New Member</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="text_number_not_shared"><italic>Your number will not be shared, it will only be used to verify that your account is unique</italic></string>
    <string name="text_verificationCode">Enter the Verification Code you received</string>
    <string name="hint_verificationCode">Verification Code</string>
    <string name="button_send_verification">Send Verification Again</string>
    <string name="hint_about">About</string>
    <string name="text_upload_photo">Upload a Recent Photo</string>
    <string name="text_terms">Our mission is to help people make meaningful, face-to-face connections while sharing their skills and talents with each other.

In legal terms, PayForward provides a neutral platform through which you can give and receive, but you need to understand the following:

You may not access or use PayForward if you are under 18 years old.

All transactions are between the parties using PayForward. PayForward is not involved in any way and thus everything you do is at your own risk. You should always use caution and common sense when entering into a transaction and inspect each community member before you interact with them.

Services provided through PayForward are not guaranteed, warranted or insured. PayForward does not do background checks or verify licenses.

Many jurisdictions have law protecting consumers and other contract parties, limiting their ability to waive certain rights and responsibilities. We respect such laws; nothing herein shall waive rights or responsibilities that cannot be waived.

We are not liable for any harm resulting from user content, user conduct, e.g. illegal conduct, your PayForward use; or our representation.

According to United States tax law, you are to report the fair market value of their earnings from all sources. PayForward recommends speaking to your tax advisor about how to report business income or expenses incurred in the course of receiving and providing services via the Site.

If you do not agree with all of the provisions of this agreement, do not access or use this site or services.

Illegal acts are still illegal even on this site. Therefore, do not initiate or enter into any illegal transcations.

In summary: Treat others as you would like to be treated. We are setting up a system that rewards generosity and giving, so be kind, have fun, use common sense, and use PayForward at your own risk.</string>
    <string name="text_didnt_receive">I didn\'t receive a text</string>
    <string name="text_where_home">Where\'s Home?</string>
    <string name="hint_enter_address">Enter Address</string>
    <string name="button_current_loc">Use Current Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="choose_com">Choose a Community</string>
    <string name="title_com">SLOcals Only</string>
    <string name="type_com"><i>Public Group with 23,291 Members</i></string>
    <string name="com_descr">If you live in San Luis Obispo, CA, join us! Local businesses and locals only. Enjoy discounts at your favorite spots and connect with others who call SLO home.</string>
    <string name="button_com_join">Join this Community</string>
    <string name="required_error">This is required!</string>
    <string name="invalid_email_error">This email is invalid!</string>
    <string name="password_length_error">Must be at least 6 characters!</string>

    <!-- Strings for Facebook login -->
    <string name="facebook_app_id">1900026713578014</string>
    <string name="fb_login_protocol_scheme">fb1900026713578014</string>

    <string name="offer_text_title">Give your Offer a Title</string>
    <string name="hint_title">Title</string>
    <string name="tit_desc_offer">Describe your Offer</string>
</resources>