<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.payforward.androidapp.Post.PostTypeActivity">

    <!-- TODO: Fix image -->
    <Button
        android:id="@+id/offer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_popup_sync"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/offer_red"
        android:text="@string/offer_button"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/offer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/offer_button"
        android:layout_alignStart="@+id/offer_button"
        android:layout_below="@+id/offer_button"
        android:layout_marginTop="15dp"
        android:text="@string/offer_text" />

    <!-- TODO: Fix image -->
    <Button
        android:id="@+id/request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/offer_text"
        android:drawableTop="@android:drawable/ic_delete"
        android:layout_alignStart="@+id/offer_text"
        android:layout_below="@+id/offer_text"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/request_green"
        android:text="@string/request_button"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/request_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/request_button"
        android:layout_alignStart="@+id/request_button"
        android:layout_below="@+id/request_button"
        android:layout_marginTop="15dp"
        android:text="@string/request_text" />

</RelativeLayout>
