<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.payforward.androidapp.SignUpTypeActivity">

    <TextView
        android:id="@+id/sign_up_type"
        style="@style/SignUpHelperText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_type_helper" />

    <Button
        android:id="@+id/myself_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sign_up_type"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:background="@color/white"
        android:onClick="nextScreen"
        android:text="@string/myself_button"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/business_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/myself_button"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:onClick="nextScreen"
        android:text="@string/business_button"
        android:textAllCaps="false" />
</RelativeLayout>
