<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payforward.androidapp.onboard.IntroPageFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="290dp"
        android:adjustViewBounds="true"
        android:src="@drawable/intro_page1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:gravity="center"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/loginbutton"
        android:minHeight="50dp"
        android:minWidth="150dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/signupbutton"
        android:minHeight="50dp"
        android:minWidth="150dp"
        android:layout_alignBaseline="@+id/loginbutton"
        android:layout_alignBottom="@+id/loginbutton"
        android:layout_alignParentRight="true"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
