<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context="com.payforward.androidapp.onboard.WhereHomeActivity">

    <ProgressBar
        android:id="@+id/progressBar10"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/titleText"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/text_where_home"
        android:layout_below="@+id/progressBar10"
        android:layout_centerHorizontal="true" />
    <EditText
        style="@style/Input_board"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/hint_enter_address"
        android:maxLines="1"
        android:id="@+id/editText"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/titleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/offer_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:text="@string/button_current_loc"
        android:textColor="@color/black"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <android.support.design.widget.FloatingActionButton
        style="@style/Float_Button_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:onClick="newActivity"
        android:id="@+id/floatingActionButton">
    </android.support.design.widget.FloatingActionButton>


</RelativeLayout>
